# oscar

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  config.json  docker-compose.yml  kbplus-changes.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
deploy/cliproxyapi/: config.example.yaml
docs/plans/: better-ai-backend-error-messages.md  calendar-command-ux-rethink.md  calendar-unified-tools-kbplus-integration.md  cicd-github-actions.md  inline-approval-buttons.md  web-search-tool-implementation.md
openspec/changes/add-daily-bible-reading/: design.md
openspec/changes/add-daily-bible-reading/specs/daily-bible-reading/: spec.md
openspec/changes/add-local-voice-transcription/: design.md  tasks.md
openspec/changes/add-local-voice-transcription/specs/local-voice-note-transcription/: spec.md
openspec/changes/archive/2026-04-01-telegram-personal-assistant/: tasks.md
openspec/changes/archive/2026-04-01-telegram-personal-assistant/specs/assistant-chat-and-approvals/: spec.md
openspec/changes/archive/2026-05-10-add-daily-bible-reading/: proposal.md  tasks.md
openspec/changes/archive/2026-05-10-add-local-voice-transcription/: proposal.md
openspec/changes/telegram-personal-assistant/: design.md  proposal.md
openspec/changes/telegram-personal-assistant/specs/hcounter-hour-tracking/: spec.md
openspec/changes/telegram-personal-assistant/specs/notes-and-inbox-capture/: spec.md
openspec/changes/telegram-personal-assistant/specs/task-and-shopping-management/: spec.md
openspec/specs/assistant-chat-and-approvals/: spec.md
openspec/specs/hcounter-hour-tracking/: spec.md
openspec/specs/icloud-calendar-integration/: spec.md
openspec/specs/notes-and-inbox-capture/: spec.md
openspec/specs/reminder-and-briefing-scheduler/: spec.md
openspec/specs/task-and-shopping-management/: spec.md
src/personal_assistant_bot/: __init__.py  ai.py  ai_errors.py  bible_integration.py  bot.py  calendar_integration.py  config.py  hours.py  kbplus_integration.py  main.py  services.py  speech.py  storage.py  web_search_service.py
tests/: test_ai_errors.py  test_ai_tool_calls.py  test_approval_and_scheduler.py  test_bible_bot_and_service.py  test_bible_integration.py  test_bible_storage_and_scheduler.py  test_bot_approval_buttons.py  test_bot_handlers.py  test_bot_voice.py  test_config.py  test_hours_and_calendar.py  test_hours_extra.py  test_services_core.py  test_services_preferences.py  test_speech.py  test_storage_direct.py
(+4 files in other folders)
