[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-personal-assistant"
version = "0.1.0"
description = "Telegram-first personal assistant with deterministic tools and AI chat"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "caldav>=1.4,<2",
  "icalendar>=5,<6",
  "faster-whisper>=1.1,<2",
  "httpx>=0.27,<0.29",
  "python-telegram-bot[job-queue]>=21.6,<22",
  "playwright>=1.40,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
  "ruff>=0.8,<1",
  "mypy>=1.10,<2",
]

[project.scripts]
telegram-personal-assistant = "personal_assistant_bot.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
  "E",      # pycodestyle errors
  "W",      # pycodestyle warnings
  "F",      # pyflakes
  "I",      # isort
  "UP",     # pyupgrade
  "B",      # flake8-bugbear
  "SIM",    # flake8-simplify
  "RUF100", # unused noqa
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]  # assert False is fine in tests

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
# Start permissive — tighten incrementally as type coverage improves
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = [
  "faster_whisper",
  "caldav",
  "icalendar",
  "telegram",
  "telegram.ext",
  "playwright",
  "playwright.async_api",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
